[gd_scene load_steps=6 format=3 uid="uid://b5t4l2n1p8q3r"]

[ext_resource type="Script" path="res://scripts/DungeonScene.gd" id="1_0123"]
[ext_resource type="Script" path="res://scripts/DungeonGenerator.gd" id="2_0123"]
[ext_resource type="PackedScene" uid="uid://bm8wvvxd2ln6j" path="res://scenes/Player.tscn" id="3_0123"]
[ext_resource type="Script" path="res://scripts/GameUI.gd" id="4_0123"]

[sub_resource type="TileSet" id="TileSet_1"]

[node name="Dungeon" type="Node2D"]
script = ExtResource("1_0123")

[node name="DungeonGenerator" type="Node2D" parent="."]
script = ExtResource("2_0123")

[node name="TileMap" type="TileMap" parent="DungeonGenerator"]
tile_set = SubResource("TileSet_1")
format = 2

[node name="Player" parent="." instance=ExtResource("3_0123")]

[node name="Enemies" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4_0123")

[node name="HealthBar" type="ProgressBar" parent="UI/GameUI"]
layout_mode = 0
anchor_right = 0.3
anchor_bottom = 0.05
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0
max_value = 100.0
value = 100.0

[node name="HealthLabel" type="Label" parent="UI/GameUI/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPBar" type="ProgressBar" parent="UI/GameUI"]
layout_mode = 0
anchor_top = 0.06
anchor_right = 0.3
anchor_bottom = 0.11
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0
max_value = 100.0

[node name="XPLabel" type="Label" parent="UI/GameUI/XPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "0/100 XP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/GameUI"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.13
anchor_right = 0.15
anchor_bottom = 0.18
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="Control" parent="UI/GameUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="SkillTree" type="Control" parent="UI/GameUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0

[node name="PauseMenu" type="Control" parent="UI/GameUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverScreen" type="Control" parent="UI/GameUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
